# are-demo-pipeline

./: .env.example  .gitignore  1-UAT.md  ARCHITECTURE.md  CASE_STUDY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  demo_repo_are.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: SUMMARY.md
adr/: 001-rust-python-split.md
docs/: compliance-flow.md  gdpr-architecture.md
examples/: context_builder.py  privacy_filter.rs  schema.sql
