[package]
name = "are-demo-pipeline"
version = "1.0.0"
edition = "2021"
description = "Hybrid Rust/Python pipeline for real estate compliance and AI asset generation."
license = "MIT"

# This Cargo.toml serves as documentation for the project's architecture.
# It defines the key dependencies used for safety, performance, and compliance.

[dependencies]
# Web & Async
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Data Processing
polars = { version = "0.40", features = ["lazy", "parquet", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The Python Bridge
pyo3 = { version = "0.23", features = ["auto-initialize"] }

# AI & LLM Orchestration
rig-core = "0.1"

# Web Harvesting
spider = "1.98"

# Compliance & Security
regex = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
